[gd_scene load_steps=28 format=2]

[ext_resource path="res://Visualiser/Visualiser.gd" type="Script" id=1]
[ext_resource path="res://resources/default_env.tres" type="Environment" id=2]
[ext_resource path="res://Visualiser/ParticleLight.gd" type="Script" id=3]
[ext_resource path="res://resources/cyan_light_mat.tres" type="Material" id=4]
[ext_resource path="res://resources/magenta_light_mat.tres" type="Material" id=5]
[ext_resource path="res://resources/yellow_light_mat.tres" type="Material" id=6]
[ext_resource path="res://resources/white_light_mat.tres" type="Material" id=7]
[ext_resource path="res://Visualiser/Stellation.gd" type="Script" id=8]
[ext_resource path="res://Visualiser/Responder.gd" type="Script" id=9]
[ext_resource path="res://Visualiser/Orbiter.tscn" type="PackedScene" id=10]
[ext_resource path="res://resources/metallic_mat.tres" type="Material" id=11]
[ext_resource path="res://Visualiser/Pulser.gd" type="Script" id=12]

[sub_resource type="Curve" id=1]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=2]
curve = SubResource( 1 )

[sub_resource type="ParticlesMaterial" id=3]
lifetime_randomness = 0.13
trail_divisor = 4
trail_size_modifier = SubResource( 2 )
direction = Vector3( 0, -1, 0 )
spread = 30.0
gravity = Vector3( 0, 9.8, 0 )
initial_velocity = 20.0
initial_velocity_random = 0.2
angle_random = 1.0

[sub_resource type="SphereMesh" id=4]
material = ExtResource( 7 )
radius = 0.05
height = 0.1

[sub_resource type="SphereMesh" id=5]
material = ExtResource( 7 )
radius = 0.25
height = 0.5

[sub_resource type="ParticlesMaterial" id=6]
lifetime_randomness = 0.13
trail_divisor = 4
direction = Vector3( 0, -1, 0 )
spread = 30.0
gravity = Vector3( 0, -4.9, 8.487 )
initial_velocity = 20.0
initial_velocity_random = 0.2
angle_random = 1.0
color = Color( 0, 1, 1, 1 )

[sub_resource type="SphereMesh" id=7]
material = ExtResource( 4 )
radius = 0.05
height = 0.1

[sub_resource type="SphereMesh" id=8]
material = ExtResource( 4 )
radius = 0.25
height = 0.5

[sub_resource type="ParticlesMaterial" id=9]
lifetime_randomness = 0.13
trail_divisor = 4
direction = Vector3( 0, -1, 0 )
spread = 30.0
gravity = Vector3( 0, -4.9, 8.487 )
initial_velocity = 20.0
initial_velocity_random = 0.2
angle_random = 1.0
color = Color( 0.992157, 0, 1, 1 )

[sub_resource type="SphereMesh" id=10]
material = ExtResource( 5 )
radius = 0.05
height = 0.1

[sub_resource type="SphereMesh" id=11]
material = ExtResource( 5 )
radius = 0.25
height = 0.5

[sub_resource type="ParticlesMaterial" id=12]
lifetime_randomness = 0.13
trail_divisor = 4
direction = Vector3( 0, -1, 0 )
spread = 30.0
gravity = Vector3( 0, -4.9, 8.487 )
initial_velocity = 20.0
initial_velocity_random = 0.2
angle_random = 1.0
color = Color( 1, 1, 0, 1 )

[sub_resource type="SphereMesh" id=13]
material = ExtResource( 6 )
radius = 0.05
height = 0.1

[sub_resource type="SphereMesh" id=14]
material = ExtResource( 6 )
radius = 0.25
height = 0.5

[sub_resource type="CubeMesh" id=15]

[node name="Visualiser" type="Spatial"]
script = ExtResource( 1 )

[node name="Scaler" type="Tween" parent="."]

[node name="Base" type="Spatial" parent="."]
script = ExtResource( 9 )

[node name="BottomLight" type="Spatial" parent="."]
script = ExtResource( 3 )

[node name="Light" type="SpotLight" parent="BottomLight"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, -11.55, 0 )
spot_range = 50.0
spot_attenuation = 0.25

[node name="Particles" type="Particles" parent="BottomLight/Light"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )
emitting = false
amount = 256
lifetime = 3.0
one_shot = true
explosiveness = 1.0
process_material = SubResource( 3 )
draw_pass_1 = SubResource( 4 )

[node name="MeshInstance" type="MeshInstance" parent="BottomLight/Light"]
transform = Transform( 0.987552, 0.152609, -0.0381052, -0.152578, 0.988284, 0.00372981, 0.038228, 0.00213065, 0.999267, 0, 0, 0 )
mesh = SubResource( 5 )
material/0 = null

[node name="Lights" type="Spatial" parent="."]
script = ExtResource( 3 )

[node name="CLight" type="SpotLight" parent="Lights"]
transform = Transform( -0.5, 0.433013, -0.75, 0, 0.866025, 0.5, 0.866025, 0.25, -0.433013, -10, 5.77, -5.77 )
light_color = Color( 0.501961, 1, 1, 1 )
light_energy = 2.0
spot_range = 50.0
spot_attenuation = 0.25

[node name="Particles" type="Particles" parent="Lights/CLight"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )
emitting = false
amount = 256
lifetime = 3.0
one_shot = true
explosiveness = 1.0
randomness = 1.0
process_material = SubResource( 6 )
draw_pass_1 = SubResource( 7 )

[node name="MeshInstance" type="MeshInstance" parent="Lights/CLight"]
transform = Transform( 1, 0, 0, 0, 1, 0, -2.98023e-08, 0, 1, 0, 0, 0 )
mesh = SubResource( 8 )
material/0 = null

[node name="MLight" type="SpotLight" parent="Lights"]
transform = Transform( -0.5, -0.433013, 0.75, 0, 0.866025, 0.5, -0.866025, 0.25, -0.433013, 10, 5.77, -5.77 )
light_color = Color( 1, 0.25098, 0.501961, 1 )
light_energy = 2.0
spot_range = 50.0
spot_attenuation = 0.25

[node name="Particles" type="Particles" parent="Lights/MLight"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )
emitting = false
amount = 256
lifetime = 3.0
one_shot = true
explosiveness = 1.0
randomness = 1.0
process_material = SubResource( 9 )
draw_pass_1 = SubResource( 10 )

[node name="MeshInstance" type="MeshInstance" parent="Lights/MLight"]
transform = Transform( 1, 0, 0, 0, 1, 0, 2.98023e-08, 0, 1, 0, 0, 0 )
mesh = SubResource( 11 )
material/0 = null

[node name="YLight" type="SpotLight" parent="Lights"]
transform = Transform( 1, 0, 0, 0, 0.866025, 0.5, 0, -0.5, 0.866025, 0, 5.77, 11.55 )
light_color = Color( 1, 1, 0.501961, 1 )
light_energy = 2.0
spot_range = 50.0
spot_attenuation = 0.25

[node name="Particles" type="Particles" parent="Lights/YLight"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )
emitting = false
amount = 256
lifetime = 3.0
one_shot = true
explosiveness = 1.0
randomness = 1.0
process_material = SubResource( 12 )
draw_pass_1 = SubResource( 13 )

[node name="MeshInstance" type="MeshInstance" parent="Lights/YLight"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, -2.98023e-08, 1, 0, 0, 0 )
mesh = SubResource( 14 )
material/0 = null

[node name="Orbiter" parent="." instance=ExtResource( 10 )]

[node name="Objects" type="Spatial" parent="."]

[node name="Stellation" type="Spatial" parent="Objects"]
transform = Transform( 1, 0, 0, 0, 0.707107, -0.707107, 0, 0.707107, 0.707107, 0, 0, 0 )
script = ExtResource( 8 )
pulse = 1.77

[node name="Pulser" type="Tween" parent="Objects/Stellation"]
script = ExtResource( 12 )

[node name="CubeX" type="MeshInstance" parent="Objects/Stellation"]
transform = Transform( 1, 0, 0, 0, 0.707107, -0.707107, 0, 0.707107, 0.707107, 0, 0, 0 )
mesh = SubResource( 15 )
material/0 = ExtResource( 11 )

[node name="CubeY" type="MeshInstance" parent="Objects/Stellation"]
transform = Transform( 0.707107, 0, 0.707107, 0, 1, 0, -0.707107, 0, 0.707107, 0, 0, 0 )
mesh = SubResource( 15 )
material/0 = ExtResource( 11 )

[node name="CubeZ" type="MeshInstance" parent="Objects/Stellation"]
transform = Transform( 0.707107, -0.707107, 0, 0.707107, 0.707107, 0, 0, 0, 1, 0, 0, 0 )
mesh = SubResource( 15 )
material/0 = ExtResource( 11 )

[node name="Boom" type="Spatial" parent="."]

[node name="Camera" type="Camera" parent="Boom"]
transform = Transform( -1, 1.89218e-08, -8.53505e-08, 0, 0.976296, 0.21644, 8.74228e-08, 0.21644, -0.976296, 0, 3.8, -30 )
environment = ExtResource( 2 )
fov = 42.5
